# my-drive-manager

./: .gitignore  .pylintrc  Makefile  README.md  docker-compose.yml  host.sh  init.sh  logs-processor-2025-06-17.jsonl.1  pyproject.toml
.github/: copilot-instructions.md
.github/chatmodes/: bdd.chatmode.md
.kanbn/: index.md
.kanbn/tasks/: backup-photos-from-cloud-drives.md
dockerfile/backup_from/: Dockerfile  Makefile
dockerfile/rabbitmq.app/: Dockerfile  Makefile  advanced.config  advanced.nossl.config  rabbitmq.conf  rabbitmq.nossl.conf
docs/: architecture.md
generate/: Makefile
generate/feature/: common.py  folders.py  tasks.py
init/queue/: docker-compose.yml  docker-queue.service  service.sh
scripts/: install.tunnel.sh
src/entry/functions/start-backup-from-icloud-photos/: workflow.py
src/entry/functions/start_backup_from/: Makefile  __main__.py  list_all_files_into_queue.py
src/entry/functions/start_backup_from_icloud_photos/: Makefile  __main__.py  workflow.py
src/entry/functions/start_budo_backup/: Makefile  __main__.py  workflow.py
src/feature/backup_files_from/: .feature
src/feature/backup_files_from/domain/business/: media_queue_preparer.py  queue_media_file_mover.py
src/feature/backup_files_from/domain/repositories/: media_manager.py  queue.py
src/feature/backup_files_from/infrastructure/drivers/: Makefile  __main__.py
src/feature/backup_photos_from/: .mermaid
src/feature/backup_photos_from/domain/business/: media_queue_preparer.py  queue_media_file_mover.py  save_file_information.py
src/feature/backup_photos_from/domain/entities/: file.py
src/feature/backup_photos_from/domain/repositories/: file_manager.py  media_manager.py  queue.py
src/feature/find_photo_duplication/: README.md
src/shared/domain/business/: abstraction.py
src/shared/infrastructure/logging/: custom_json_formatter.py  syslog.py
tasks/todo/backup_photos_from/: .md  exec.py
tests/unitary/feature/backup_photos_from/: .feature  README.md
(+36 files in other folders)
