[project]
name = "my-drive-manager"
version = "0.1.0"
description = "Controlling my backup files"
authors = [
    { name = "Raphael Silva do Nascimento", email = "eng.raphaelsn@gmail.com" },
]
keywords = ["cli", "drive", "manager"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "pillow>=11.2.1",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
]
